--- a/aula - 13/index.html
+++ b/aula - 13/index.html
@@ -1,46 +1,108 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
+    <meta name="description" content="Um site de exemplo do modulo de CSS">
+    <meta name="keywords" content="Agencia Digital, CSS, HTML">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsivo.css">
+    <title>Agência</title>
 </head>
+
 <body>
-    <header>
-        <h1>Bem vindo ao Meu Site</h1>
+    <nav class="navbar">
+        <div class="logo">
+            <h1>Agência</h1>
+        </div>
+        <div class="menu">
+            <a href="#">Home</a>
+            <a href="#">Sobre Nós</a>
+            <a href="#">Serviços</a>
+            <a id="botao" href="#">Fale Conosco</a>
+        </div>
+    </nav>
+    <header class="header">
+        <div class="headline">
+            <h2 style="letter-spacing: 15px;">você achou a melhor</h2>
+            <h2 style="font-size:80px">Agência Digital</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, magnam rem unde laborum temporibus cum
+                repellendus laudantium eius veritatis consequatur quod veniam, voluptates voluptate alias aliquam fugiat
+                itaque cumque quia.</p>
+            <a href="#" class="contact-btn">Contrate Agora</a>
+        </div>
+        <div class="img-headline">
+            <img style="max-width: 90%;" src="img/hero_right.png">
+        </div>
     </header>
-
-    <section class="sobre">
-        <h2>Sobre mim</h2>
-
-        <p>Desenvolvedor apaixonado por criar interfaces funcionais.</p>
-
-    </section>
-
-    <section class="servicos">
-        <h2>Serviços</h2>
-
-        <div class="servico-container">
-            <div class="servico">
-                <h3>Design Responsivo</h3>
-                <p>Criação de layouts adaptáveis  para todos os dispostivos.</p>
+    <section>
+        <h2>O que podemos fazer pelo seu negócio?</h2>
+        <div class="servicos">
+            <div class="card">
+                <img src="img/pc.png">
+                <div class="card-text">
+                    <h3>Desenvolvimento de Sites</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis totam omnis veritatis
+                        sit
+                        distinctio doloremque quia officiis, asperiores, consectetur dolorem magnam doloribus eos odio
+                        quibusdam? Excepturi corrupti labore necessitatibus?</p>
+                </div>
+                <div class="texto-oculto">
+                    <h3>Outro conteúdo qualquer</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis totam omnis veritatis
+                        sit
+                        distinctio doloremque quia officiis, asperiores, consectetur dolorem magnam doloribus eos odio
+                        quibusdam? Excepturi corrupti labore necessitatibus?</p>
+                </div>
             </div>
-
-            <div class="servico">
-                <h3>Desenvolvimento Frontend</h3>
-                <p>Experiência em HTML, CSS, Javascript e Frameworks modernos.</p>
+            <div class="card">
+                <img src="img/smartphone.png">
+                <div class="card-text">
+                    <h3>Desenvolvimento de Apps</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis totam omnis veritatis
+                        sit
+                        distinctio doloremque quia officiis, asperiores, consectetur dolorem magnam doloribus eos odio
+                        quibusdam? Excepturi corrupti labore necessitatibus?</p>
+                </div>
+                <div class="texto-oculto">
+                    <h3>Outro conteúdo qualquer</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis totam omnis veritatis
+                        sit
+                        distinctio doloremque quia officiis, asperiores, consectetur dolorem magnam doloribus eos odio
+                        quibusdam? Excepturi corrupti labore necessitatibus?</p>
+                </div>
             </div>
-
-            <div class="servico">
-                <h3>Consultoria</h3>
-                <p>Ajuda na implementação de soluções digitais eficientes.</p>
+            <div class="card">
+                <img src="img/marketing.png">
+                <div class="card-text">
+                    <h3>Marketing</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis totam omnis veritatis
+                        sit
+                        distinctio doloremque quia officiis, asperiores, consectetur dolorem magnam doloribus eos odio
+                        quibusdam? Excepturi corrupti labore necessitatibus?</p>
+                </div>
+                <div class="texto-oculto">
+                    <h3>Outro conteúdo qualquer</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae nobis totam omnis veritatis
+                        sit
+                        distinctio doloremque quia officiis, asperiores, consectetur dolorem magnam doloribus eos odio
+                        quibusdam? Excepturi corrupti labore necessitatibus?</p>
+                </div>
             </div>
         </div>
     </section>
-
     <footer>
-        <p>2024 - Todos direitos reservados.</p>
+        <div class="logo-rodape">
+            <h1 class="agencia">Agência</h1>
+            <p style="color:white">Um site feito com HTML e CSS Puro</p>
+        </div>
+        <b style="color:white;">Todos os direitos reservados.</b>
     </footer>
+    <a class="whats" target="_blank"
+        href="https://api.whatsapp.com/send?phone=5549988070996&text=Ol%C3%A1%20peguei%20seu%20contato%20no%20site"><img
+            style="width: 100px;" src="img/whats.png"></a>
 </body>
+
 </html>
